# opsrisk-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily-brief.yml  weekly-brief.yml
briefs/: 2026-04-28.md  2026-04-29.md
briefs/weekly/: 2026-04-29.md
config/: sources.toml
docs/: architecture.md  automation.md  data_quality.md  html_reports.md  methodology.md  source_quality.md  weekly_analytics.md
reports/daily/: 2026-04-29-email.html  2026-04-29.html
reports/weekly/: 2026-04-29.html
scripts/: check.sh  run.sh  send_report_email.py
src/opsrisk/: __main__.py  brief.py  config.py  database.py  feed.py  html_report.py  models.py  scorer.py  source_audit.py  validate.py  weekly.py
src/opsrisk_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
